crates/plotnik-tests/tests/04-emit/types/mapped/struct-enum-alias.txt
Alias = (identifier)

Expr = [
  Id: (Alias) @name :: Ident
  Num: (number) @value
]

Q = (program (expression_statement (Expr) @expr))
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:4:7
  |
1 | Alias = (identifier)
  |         ------------ defined here
...
4 |   Id: (Alias) @name :: Ident
  |       ^^^^^^^
